Relax test for valid stack frame address (now that we have multiple kernel stacks since ... a long time). Just test for a valid kernel VA, using the same test as for "pc". Very close to a patch suggested by Tobias Ulmer in PR port-sparc64/54221.